--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+        "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+        "dev": "parcel src/index.html"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.10.0"
+        "eslint-config-prettier": "^6.10.0",
+        "parcel-bundler": "^1.12.4"
     },
     "dependencies": {
-        "prettier": "^1.19.1"
+        "prettier": "^1.19.1",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0"
     }
 }
